update about and writing

--- a/src/app/writing/writing.component.html
+++ b/src/app/writing/writing.component.html
@@ -12,16 +12,16 @@
       </h2>
       <ul class="article-list">
         <li class="article-item">
-          <a class="article-link" href="">A season of faith's perfection</a>
+          <a class="article-link" href="">Link Coming Soon</a>
         </li>
         <li class="article-item">
-          <a class="article-link" href="">Lincoln in the Bardo</a>
+          <a class="article-link" href="">Link Coming Soon</a>
         </li>
         <li class="article-item">
-          <a class="article-link" href="">The Seventh Seal</a>
+          <a class="article-link" href="">Link Coming Soon</a>
         </li>
         <li class="article-item">
-          <a class="article-link" href="">The Goldberg Variations BWV 944</a>
+          <a class="article-link" href="">Link Coming Soon</a>
         </li>
       </ul>
     </div>
