--- a/src/scss/_header-footer.scss
+++ b/src/scss/_header-footer.scss
@@ -5,11 +5,11 @@
 
   .heading {
     font-weight: bold;
-    color: $big-barracuda;
+    color: $header-title;
   }
 
   .subheading {
-    color: $deep-gray;
+    color: $header-subtitle;
     padding-bottom: 1em;
   }
 }
