--- a/src/scss/_work-intro.scss
+++ b/src/scss/_work-intro.scss
@@ -1,9 +1,15 @@
 .work-header {
   display: grid;
+  justify-content: space-between;
+  grid-template-rows: 3fr 1fr auto;
 
   @include respond-to('larger') {
     grid-template-columns: 1fr 1fr 2fr;
-    justify-content: space-between;
+    grid-template-rows: unset;
+  }
+
+  @include respond-to('largest') {
+    grid-template-columns: 1fr 1fr 3fr;
   }
 }
 
@@ -14,6 +20,11 @@
   font-family: 'georgia', serif;
   font-weight: bold;
   line-height: 1.4em;
+}
+
+.work-title-border {
+  position: relative;
+  align-self: center;
 
   &::before {
     content: '';
@@ -21,27 +32,24 @@
     width: 20%;
     height: 1px;
     background-color: $elder-salmon;
-    bottom: -1em;
   }
 
   @include respond-to('larger') {
+    max-width: 1em;
+    align-self: unset;
+    justify-self: center;
+
     &::before {
       content: none;
     }
-  }
-}
 
-.work-title-border {
-  max-width: 1em;
-  position: relative;
-  justify-self: center;
-
-  &::after {
-    content: '';
-    position: absolute;
-    width: 1px;
-    height: 100%;
-    background-color: $elder-salmon;
+    &::after {
+      content: '';
+      position: absolute;
+      width: 1px;
+      height: 100%;
+      background-color: $elder-salmon;
+    }
   }
 }
 
@@ -51,16 +59,11 @@
   font-family: 'georgia', serif;
   font-size: 1.2em;
   line-height: 1.6em;
-  margin-top: 3em;
   max-width: 26em;
 
   @include respond-to('larger') {
     margin-top: 0;
     font-size: 1.4em;
-  }
-
-  @include respond-to('largest') {
-    min-width: 18em;
   }
 }
 
