--- a/src/scss/_work-entry.scss
+++ b/src/scss/_work-entry.scss
@@ -1,6 +1,6 @@
 .work-body {
-  max-width: 30em;
   font-family: 'georgia', serif;
+  color: $gentle-kraken;
   font-size: 1.05em;
   line-height: 1.6em;
   margin-top: 1em;
