--- a/src/scss/_work-intro.scss
+++ b/src/scss/_work-intro.scss
@@ -57,6 +57,7 @@
   position: relative;
   align-self: center;
   font-family: 'georgia', serif;
+  color: $gentle-kraken;
   font-size: 1.2em;
   line-height: 1.6em;
   max-width: 26em;
@@ -83,6 +84,7 @@
 .work-description {
   position: relative;
   font-family: 'georgia', serif;
+  color: $gentle-kraken;
   font-size: 1em;
   line-height: 1.6em;
   padding-bottom: 2em;
