--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -41,7 +41,7 @@
 
 .bio {
   p {
-    color: $cool-shirt;
+    color: $gentle-kraken;
     font-family: 'Garamond', serif;
     font-size: 1.2em;
     line-height: 1.4em;
