--- a/src/scss/_nav.scss
+++ b/src/scss/_nav.scss
@@ -1,13 +1,31 @@
+$shift-nav-to-top: 'mediumer';
+
+.inner-border {
+  position: absolute;
+  top: 1em;
+  left: 1em;
+  right: 1em;
+  bottom: 1em;
+  border: 10px solid $sunburnt-salmon;
+}
+
+.main-window {
+  @include respond-to($shift-nav-to-top) {
+    padding-left: 15em;
+  }
+}
+
 .sidebar-header {
   display: block;
-  background-color: $nav-mobile;
-  border-right: 0;
+  // background-color: $nav-mobile;
+  // border-right: 0;
   // border-bottom: 40px solid $nav-border;
+  // border: 1px solid green;
   padding-top: 2.2em;
   padding-left: 1.2em;
   height: 8em;
 
-  @include respond-to('medium') {
+  @include respond-to($shift-nav-to-top) {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -15,7 +33,7 @@
     height: 100%;
     width: 15em;
     background-color: $nav;
-    border-bottom: 0;
+    // border-bottom: 0;
     // border-right: 2px solid $nav-border;
     padding: 2.5em;
   }
@@ -24,7 +42,7 @@
 .nav-list {
   display: inline-block;
 
-  @include respond-to('medium') {
+  @include respond-to($shift-nav-to-top) {
     display: block;
   }
 }
@@ -38,11 +56,7 @@
   line-height: 1.8rem;
   margin-bottom: .6em;
 
-  @include respond-to('medium') {
-    font-size: 1.3rem;
-  }
-
-  @include respond-to('largest') {
+  @include respond-to($shift-nav-to-top) {
     font-size: 1.4rem;
   }
 }
@@ -50,7 +64,7 @@
 .logo-description {
   display: none;
 
-  @include respond-to('medium') {
+  @include respond-to($shift-nav-to-top) {
     display: block;
     font-size: 1rem;
     font-weight: normal;
@@ -58,13 +72,11 @@
   }
 }
 
-
-
 .nav-item {
   display: inline;
   padding-right: 2em;
 
-  @include respond-to('medium') {
+  @include respond-to($shift-nav-to-top) {
     display: block;
     padding-right: 0;
     padding-bottom: 1.2em;
@@ -95,7 +107,7 @@
 .contact a {
   display: none;
 
-  @include respond-to('medium') {
+  @include respond-to($shift-nav-to-top) {
     display: inline;
   }
 }
