--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <header class="sidebar-header">
-  <div class="inner-border"></div>
+  <!-- <div class="inner-border"></div> -->
   <a class="logo" routerLink="/about">
     Peter Cutler
     <!-- <span class="logo-description">UX Researcher</span> -->
