--- a/src/scss/_work-entry.scss
+++ b/src/scss/_work-entry.scss
@@ -1,5 +1,6 @@
 .work-body {
   font-family: 'georgia', serif;
+  max-width: 30em;
   color: $gentle-kraken;
   font-size: 1.05em;
   line-height: 1.6em;
