--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -45,13 +45,9 @@
       <div class="bio">
 
         <p>
-          Hello!
-        </p>
-
-        <p>
           My name is Peter Cutler, and I'm a UX researcher living in Seattle, Washington.
-          I'm currently working towards my Master's in Human Centered Design & Engineering
-          at the University of Washington.
+          I'm currently working towards my Master's in <a target="_blank" href="https://www.hcde.washington.edu/ms/">
+          Human Centered Design & Engineering</a> at the a University of Washington.
         </p>
 
         <p>
