lots of style cleanup

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -45,16 +45,18 @@
       <div class="bio">
 
         <p>
-          My name is Peter Cutler, and I'm a UX researcher living in Seattle, Washington.
-          I'm currently working towards my Master's in <a target="_blank" href="https://www.hcde.washington.edu/ms/">
-          Human Centered Design & Engineering</a> at the a University of Washington.
+          My name is Peter Cutler, and I'm a UX researcher living in Seattle,
+          Washington. I'm currently working towards my Master's in <a target="_blank" href="https://www.hcde.washington.edu/ms/">
+          Human Centered Design & Engineering</a> at the a University of
+          Washington.
         </p>
 
         <p>
-          I'm originally from Washington, D.C., where I grew up and worked before grad school.
-          I've spent time in a number of different tech roles, contributing writing, design,
-          animation, software engineering, and lots of other work to some great companies
-          and clients. I've shared a lot of my work here. Take a look, and feel free to reach out.
+          I'm originally from Washington, D.C., where I grew up and lived
+          before grad school. I've worked in a variety of tech roles for
+          over seven years, contributing writing, design, software engineering,
+          and other work to some great companies and clients. I've shared some
+          of my work here. Take a look, and feel free to reach out.
         </p>
 
       </div>
