--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,59 +1,14 @@
-// Colors
-$pastry-blue: #3498DB;
-$bay-blue: #455C7B;
-$big-barracuda: #2C3E50;
-$angry-salmon: #DA727E;
-$elder-salmon: #E74C3C;
-$hip-salmon: #E77068;
-$sunburnt-salmon: #FF9C8C;
-
-$yurtle: #8CFFE6;
-$raindroopy: #8CF3FF;
-
-$baywater-bonanza: #3FD4D9;
-
-// Monochrome
-$white: #fff;
-$white-smoke: hsl(0, 0%, 92%);
-$wild-sand: hsl(0, 0%, 85%);
-$silver: hsl(0, 0%, 78%);
-$chalice: hsl(0, 0%, 71%);
-$mercury: hsl(0, 0%, 64%);
-$chalice: hsl(0, 0%, 57%);
-$dove-gray: hsl(0, 0%, 50%);
-$charcoal: hsl(0, 0%, 40%);
-$mine-shaft: hsl(0, 0%, 30%);
-$cool-shirt: hsl(0, 0%, 25%);
-$nightrider: hsl(0, 0%, 22%);
-$nero: hsl(0, 0%, 15%);
-$black: hsl(0, 0%, 0%);
-
-$surly-kraken: #1C1E20;
-$gentle-kraken: #282B2E;
-
-
-$light-gray: rgba(0, 0, 0, 0.1);
-$light-white: rgba(255, 255, 255, 0.8);
-$dark-white: rgba(255,255,255,0.5);
-$medium-gray: rgba(0, 0, 0, 0.5);
-$deep-gray: #222;
-
-
-$nav2: #30336b;
+// Text
+$lightest-gray: $white-smoke;
+$light-gray: $dove-gray;
+$dark-gray: $obsidian;
+$darkest-gray: $nero;
+$accent-red: $elder-salmon;
 
 // Nav
-$nav: $white;
-$nav-mobile: $sunburnt-salmon;
-$nav-border: $gentle-kraken;
-$nav-link: $gentle-kraken;
-$nav-link-hover: $gentle-kraken;
-$logo: $gentle-kraken;
-$logo-description: $gentle-kraken;
-
-// Mains
-$header-rule: $light-gray;
-$header-title: $gentle-kraken;
-$header-subtitle: $medium-gray;
+$nav-link: $obsidian;
+$nav-link-hover: $obsidian;
+$logo: $obsidian;
 
 // Borders
 $border-thin: 1px;
