--- a/src/scss/_work-entry.scss
+++ b/src/scss/_work-entry.scss
@@ -1,8 +1,8 @@
 .work-body {
-  font-family: 'georgia', serif;
-  max-width: 30em;
-  color: $gentle-kraken;
-  font-size: 1.05em;
+  max-width: 40em;
+  font-family: $work-body-font;
+  font-size: $normaler;
+  color: $dark-gray;
   line-height: 1.6em;
   margin-top: 1em;
 
@@ -14,38 +14,61 @@
 .work-body-h2 {
   display: inline-block;
   position: relative;
-  font-size: 1.4em;
+  font-family: $work-heading-font;
+  font-size: $prettybig;
   font-weight: bold;
   line-height: 1.5em;
   margin-bottom: 3em;
   margin-top: 2em;
-  color: $nero;
+  color: $darkest-gray;
 
   &::after {
     content: '';
     position: absolute;
     height: 1px;
-    background-color: $elder-salmon;
+    background-color: $accent-red;
     left: 0;
     bottom: -1.4em;
     width: 20%;
   }
 }
 
-.work-body-image {
-  display: block;
-  max-width: 28em;
-  height: auto;
+.work-body-figure {
+  // display: block;
   margin: 1.4em 0;
 }
 
+.work-body-image {
+  // display: block;
+  max-width: 100%;
+  height: auto;
+
+  @include respond-to('medium') {
+    max-width: 30em;
+  }
+
+  @include respond-to('mediumer') {
+    max-width: 100%;
+  }
+
+  @include respond-to('large') {
+    max-width: 30em;
+  }
+}
+
+.work-body-image-caption {
+  font-size: $small;
+  line-height: 1.0625rem;
+  color: $light-gray;
+}
+
 .border {
-  border: 1px solid $silver;
+  border: 1px solid $light-gray;
 }
 
 .work-body-link {
   text-decoration: none;
-  color: $elder-salmon;
+  color: $accent-red;
 
   &:hover {
     text-decoration: underline;
