--- a/src/scss/_work-intro.scss
+++ b/src/scss/_work-intro.scss
@@ -16,8 +16,8 @@
 .work-title {
   position: relative;
   width: 6em;
-  font-size: 2.4em;
-  font-family: 'georgia', serif;
+  font-size: $hugest;
+  font-family: $work-heading-font;
   font-weight: bold;
   line-height: 1.4em;
 }
@@ -31,7 +31,7 @@
     position: absolute;
     width: 20%;
     height: 1px;
-    background-color: $elder-salmon;
+    background-color: $accent-red;
   }
 
   @include respond-to('larger') {
@@ -48,7 +48,7 @@
       position: absolute;
       width: 1px;
       height: 100%;
-      background-color: $elder-salmon;
+      background-color: $accent-red;
     }
   }
 }
@@ -56,20 +56,21 @@
 .work-subtitle {
   position: relative;
   align-self: center;
-  font-family: 'georgia', serif;
-  color: $gentle-kraken;
-  font-size: 1.2em;
+  font-family: $work-heading-font;
+  color: $dark-gray;
+  font-size: $large;
   line-height: 1.6em;
   max-width: 26em;
 
   @include respond-to('larger') {
     margin-top: 0;
-    font-size: 1.4em;
+    font-size: $largest;
   }
 }
 
 .work-tags {
-  color: $medium-gray;
+  color: $light-gray;
+  font-family: $work-body-font;
   text-transform: capitalize;
   line-height: 1.4em;
   margin-top: 2em;
@@ -83,15 +84,15 @@
 
 .work-description {
   position: relative;
-  font-family: 'georgia', serif;
-  color: $gentle-kraken;
-  font-size: 1em;
+  font-family: $work-body-font;
+  font-size: $normaler;
+  color: $dark-gray;
   line-height: 1.6em;
   padding-bottom: 2em;
-  border-bottom: $border-thin solid $header-rule;
+  border-bottom: $border-thin solid $lightest-gray;
 
   p {
-    max-width: 30em;
+    max-width: 40em;
   }
 
   p + p {
