--- a/src/scss/_work-entry.scss
+++ b/src/scss/_work-entry.scss
@@ -99,7 +99,9 @@
   @include respond-to('medium') {
     display: grid;
     // grid-template-rows: unset;
-    grid-template-columns: 1fr 1fr 1fr;
+    // grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-flow: column;
+    // grid-auto-columns: 15em;
 
     .work-body-image {
       max-width: 90%;
