more work and stubbing out remainder of oasis study

--- a/src/scss/_work-entry.scss
+++ b/src/scss/_work-entry.scss
@@ -40,6 +40,7 @@
   font-size: $normaler;
   font-weight: bold;
   line-height: 1.5em;
+  margin-top: .5em;
   margin-bottom: 1em;
   color: $darkest-gray;
   border-bottom: 1px solid $accent-red;
