--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -47,7 +47,7 @@
         <p>
           My name is Peter Cutler, and I'm a UX researcher living in Seattle,
           Washington. I'm currently working towards my Master's in <a target="_blank" class="about-body-link" href="https://www.hcde.washington.edu/ms/">
-          Human Centered Design & Engineering</a> at the a University of
+          Human Centered Design & Engineering</a> at the University of
           Washington.
         </p>
 
