--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -52,11 +52,10 @@
         </p>
 
         <p>
-          I'm originally from Washington, D.C., where I grew up and lived
-          before grad school. I've worked in a variety of tech roles for
-          over seven years, contributing writing, design, software engineering,
-          and other work to some great companies and clients. I've shared some
-          of my work here. Take a look, and feel free to reach out.
+          I've worked in a variety of tech roles for over seven years, contributing
+          writing, strategy, ux, design, and software engineering to some great
+          companies and clients. I've shared some of my work here. Take a look
+          and feel free to reach out.
         </p>
 
       </div>
