renaming paths and assets

--- a/src/scss/_work-list.scss
+++ b/src/scss/_work-list.scss
@@ -70,32 +70,32 @@
   }
 
   // IMPORTANT! Class name AND path name are sensitive
-  &.uw-secure-storage-in-shelters {
-    background-image: url('/assets/images/work/thumbnails/uw-secure-storage-in-shelters.png');
+  &.uw-secure-storage {
+    background-image: url('/assets/images/work/thumbnails/uw-secure-storage.png');
   }
 
-  &.uw-oculus-rift-onboarding-in-3d {
-    background-image: url('/assets/images/work/thumbnails/uw-oculus-rift-onboarding-in-3d.png');
+  &.uw-oculus-onboarding {
+    background-image: url('/assets/images/work/thumbnails/uw-oculus-onboarding.png');
   }
 
-  &.uw-rcrc-complex-systems-and-vca {
-    background-image: url('/assets/images/work/thumbnails/uw-rcrc-complex-systems-and-vca.png');
+  &.uw-complex-systems {
+    background-image: url('/assets/images/work/thumbnails/uw-complex-systems.png');
   }
 
-  &.uw-research-with-yarn {
-    background-image: url('/assets/images/work/thumbnails/uw-research-with-yarn.png');
+  &.uw-yarn {
+    background-image: url('/assets/images/work/thumbnails/uw-yarn.png');
   }
 
-  &.crowdskout-data-visualization-systems {
-    background-image: url('/assets/images/work/thumbnails/crowdskout-data-visualization-systems.png');
+  &.crowdskout-data-viz {
+    background-image: url('/assets/images/work/thumbnails/crowdskout-data-viz.png');
   }
 
-  &.crowdskout-date-and-time {
-    background-image: url('/assets/images/work/thumbnails/crowdskout-date-and-time.png');
+  &.crowdskout-datetime {
+    background-image: url('/assets/images/work/thumbnails/crowdskout-datetime.png');
   }
 
-  &.crowdskout-segmenting-audiences {
-    background-image: url('/assets/images/work/thumbnails/crowdskout-segmenting-audiences.png');
+  &.crowdskout-segmenting {
+    background-image: url('/assets/images/work/thumbnails/crowdskout-segmenting.png');
   }
 
   &.crowdskout-form-editor {
@@ -110,7 +110,7 @@
     background-image: url('/assets/images/work/thumbnails/vox-global-motion-design.png');
   }
 
-  &.vox-global-sustainability-for-att {
-    background-image: url('/assets/images/work/thumbnails/vox-global-sustainability-for-att.png');
+  &.vox-global-att-csr {
+    background-image: url('/assets/images/work/thumbnails/vox-global-att-csr.png');
   }
 }
