--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -45,14 +45,14 @@
       <div class="bio">
 
         <p>
-          My name is Peter Cutler, and I'm a UX researcher living in Seattle,
-          Washington. I'm currently working towards my Master's in <a target="_blank" class="about-body-link" href="https://www.hcde.washington.edu/ms/">
+          My name is Peter Cutler, and I'm a Master's student living in Seattle,
+          Washington. I'm currently studying <a target="_blank" class="about-body-link" href="https://www.hcde.washington.edu/ms/">
           Human Centered Design & Engineering</a> at the University of
           Washington.
         </p>
 
         <p>
-          I've worked in a variety of tech roles for over seven years, contributing
+          I've worked in a bunch of tech roles for the past seven years, contributing
           writing, strategy, ux, design, and software engineering to some great
           companies and clients. I've shared some of my work here. Take a look
           and feel free to reach out.
