--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -54,9 +54,13 @@
         <p>
           I've worked in a bunch of tech roles for the past seven years, contributing
           writing, strategy, ux, design, and software engineering to some great
-          companies and clients. I've shared some of my work here. Take a look
-          and feel free to reach out.
+          companies and clients. <a class="about-body-link" routerLink="/work">
+          I've shared some of my work here</a>. Take a look and feel free to reach out.
         </p>
+
+        <a class="nav-link {{page}}-link" routerLink="/work">
+          {{page}}
+        </a>
 
       </div>
     </div>
