--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -45,17 +45,18 @@
       <div class="bio">
 
         <p>
-          My name is Peter Cutler, and I'm a Master's student living in Seattle,
-          Washington. I'm currently studying <a target="_blank" class="about-body-link" href="https://www.hcde.washington.edu/ms/">
+          Hey, I'm Peter Cutler, and I'm a Master's student living in Seattle.
+          I'm currently studying <a target="_blank" class="about-body-link" href="https://www.hcde.washington.edu/ms/">
           Human Centered Design & Engineering</a> at the University of
           Washington.
         </p>
 
         <p>
-          I've worked in a bunch of tech roles for the past seven years, contributing
-          writing, strategy, ux, design, and software engineering to some great
-          companies and clients. <a class="about-body-link" routerLink="/work">
-          I've shared some of my work here</a>. Take a look and feel free to reach out.
+          I've worked in different tech roles for the past seven years, doing
+          things like writing, strategy, ux, design, and software engineering
+          with some great people. <a class="about-body-link" routerLink="/work">
+          You can find some of my work here</a>. Take a look and feel free to
+          reach out.
         </p>
 
       </div>
